--- a/socialNetwork/pom.xml
+++ b/socialNetwork/pom.xml
@@ -35,9 +35,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.12</version>
 		</dependency>
 
 		<dependency>
@@ -66,6 +66,7 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+
 	</dependencies>
 
 
