--- a/socialNetwork/src/main/resources/application.properties
+++ b/socialNetwork/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.sql.init.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3307/socialNetwork
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+#Pokretanje sql skripte - always
+#Prvi put kad kreirate semu, zakomentarisati.
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+server.error.include-message=always
+server.error.include-binding-errors=always
