--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.2.5",
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
