--- a/socialNetwork/pom.xml
+++ b/socialNetwork/pom.xml
@@ -77,6 +77,11 @@
       <version>1.18.26</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.13.0</version>
+    </dependency>
 	</dependencies>
 
 	<build>
